--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 data/raw/*.wav
+data/cleaned/*.wav
 data/txt/*.txt
-!data/txt/txt.txt
